# ssvtools

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: deploy.yaml  run_tests.yaml
src/ssvtools/: query_structure.py
tests/: test_query_structure.py  testutils.py
tests/resources/: vagus_test_scaffold1.exf
